kubernetes/filebeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: filebeat
  name: filebeat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: filebeat
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: filebeat
    spec:
      containers:
        - args:
            - --strict.perms=false
          image: docker.elastic.co/beats/filebeat:7.17.0
          name: filebeat
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/filebeat/filebeat.yml
              name: filebeat-claim0
              readOnly: true
            - mountPath: /var/lib/docker/containers
              name: filebeat-claim1
              readOnly: true
            - mountPath: /var/run/docker.sock
              name: filebeat-claim2
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: filebeat-claim0
          persistentVolumeClaim:
            claimName: filebeat-claim0
            readOnly: true
        - name: filebeat-claim1
          persistentVolumeClaim:
            claimName: filebeat-claim1
            readOnly: true
        - name: filebeat-claim2
          persistentVolumeClaim:
            claimName: filebeat-claim2
            readOnly: true
status: {}
