kubernetes/log-message-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: log-message-processor
  name: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: log-message-processor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: log-message-processor
    spec:
      containers:
        - env:
            - name: REDIS_CHANNEL
              value: log_channel
            - name: REDIS_HOST
              value: redis-db
            - name: REDIS_PORT
              value: "6379"
            - name: ZIPKIN_URL
              value: http://zipkin:9411/api/v1/spans
          image: 9805/log-message-processor
          name: log-message-processor
          resources: {}
      restartPolicy: Always
status: {}
