kubernetes/redis-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-db
  name: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: redis-db
    spec:
      containers:
        - image: redis:7.0
          name: redis-db
          resources: {}
      restartPolicy: Always
status: {}
