kubernetes/users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: users-api
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: users-api
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: PRFT
            - name: SERVER_PORT
              value: "8083"
            - name: SPRING_ZIPKIN_BASE_URL
              value: http://zipkin:9411
          image: 9805/users-api
          name: users-api
          resources: {}
      restartPolicy: Always
status: {}
