kubernetes/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: elastic
  name: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elastic
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: elastic
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
          image: elasticsearch:7.17.0
          name: elastic
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data/
              name: elastic-data
      restartPolicy: Always
      volumes:
        - name: elastic-data
          persistentVolumeClaim:
            claimName: elastic-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: elastic
  name: elastic
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
    - name: "9300"
      port: 9300
      targetPort: 9300
  selector:
    io.kompose.service: elastic
status:
  loadBalancer: {}
