kubernetes/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_HOSTS
              value: http://elastic:9200
            - name: logging.verbose
              value: "true"
            - name: xpack.monitoring.elasticsearch.hosts
              value: http://elastic:9200
            - name: xpack.monitoring.enabled
              value: "true"
            - name: xpack.monitoring.ui.enabled
              value: "true"
          image: kibana:7.17.0
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - kibana:5601
            failureThreshold: 5
            periodSeconds: 50
            timeoutSeconds: 50
          name: kibana
          ports:
            - containerPort: 5601
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  ports:
    - name: "5601"
      port: 5601
      targetPort: 5601
  selector:
    io.kompose.service: kibana
status:
  loadBalancer: {}
