kubernetes/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: logstash
    spec:
      containers:
        - image: logstash:7.9.2
          name: logstash
          ports:
            - containerPort: 5400
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/logstash/pipeline/logstash.conf
              name: logstash-claim0
              readOnly: true
            - mountPath: /usr/share/logstash/config/logstash.yml
              name: logstash-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: logstash-claim0
          persistentVolumeClaim:
            claimName: logstash-claim0
            readOnly: true
        - name: logstash-claim1
          persistentVolumeClaim:
            claimName: logstash-claim1
            readOnly: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
    - name: "5400"
      port: 5400
      targetPort: 5400
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
