kubernetes/frontend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: frontend
#   name: frontend
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#         - env:
#             - name: AUTH_API_ADDRESS
#               value: http://auth-api:8000
#             - name: PORT
#               value: "8080"
#             - name: TODOS_API_ADDRESS
#               value: http://todos-api:8082
#             - name: ZIPKIN_URL
#               value: http://zipkin:9411/api/v2/spans
#           image: 9805/frontend
#           name: frontend
#           resources:
#             limits:
#               memory: 512Mi
#               cpu: "1"
#             requests:
#               memory: 256Mi
#               cpu: "0.2"
#           ports:
#             - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-svc
#   namespace: micros
#   labels:
#     app: frontend
# spec:
#   selector:
#     app: frontend
#   type: NodePort
#   ports:
#     - name: "http"
#       port: 8080
#       targetPort: 8080


# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: nginx
#   name: frontend-ing
#   namespace: micros
#   labels:
#     app: frontend
# spec:
#   rules:
#     - host: frontend-rampup-app.net
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-svc
#                 port:
#                   number: 8080
# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - env:
            - name: AUTH_API_ADDRESS
              value: http://auth-api:8000
            - name: PORT
              value: "8080"
            - name: TODOS_API_ADDRESS
              value: http://todos-api:8082
            - name: ZIPKIN_URL
              value: http://zipkin:9411/api/v2/spans
          image: 9805/frontend
          name: frontend
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - name: "http"
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: frontend-ing
  labels:
    app: frontend
spec:
  rules:
    - host: frontend-rampup-app.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 8080
