kubernetes/docker_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker_network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker_network: "true"
